# Tarefas-Microcontroladores-2---2026-1

./: README.md
Andre_Silva/tarefa_1/main/test_tasks/: ir_line_task.c
Andre_Silva/tarefa_2/: .cproject
Andre_Silva/tarefa_2/.cache/clangd/index/: body_2wd.c.52740A288A1D4AC5.idx  body_2wd.h.BD83F720E3293171.idx  ir_line_task.c.6EC1BD817BE03066.idx  ir_line_task.h.705A0D56254AF0FC.idx  main.c.199D38831287AE6A.idx  pid_task.c.1263B8983B21C0EC.idx  threeeyes.h.812BEF3B462874E2.idx  threeeyes_task.c.ABF1A9919B73890E.idx  threeeyes_task.h.1B21A870402A412B.idx  wheel.c.C1BC65E5F9BEAEBF.idx  wheel.h.B555A688AD6FEFAA.idx
Andre_Silva/tarefa_2/main/: CMakeLists.txt  body_2wd.c  body_2wd.h  main.c
Andre_Silva/tarefa_2/main/test_tasks/: ir_line_task.c  pid_task.c  pid_task.h  threeeyes_task.c
Andre_Silva/tarefa_3/: .cproject
Andre_Silva/tarefa_3/.cache/clangd/index/: Log_task.c.5C0C3AB16E88D706.idx  Log_task.cpp.D638B6C9CA6DFA62.idx  Log_task.h.D97FD6F7CC1CAFAB.idx  bdc_motor.h.C6D6A1E839A69989.idx  body_2wd.c.52740A288A1D4AC5.idx  ir_line_task.c.6EC1BD817BE03066.idx  ir_line_task.h.705A0D56254AF0FC.idx  main.c.199D38831287AE6A.idx  pid_ctrl.h.AD1B32CBF02A6F50.idx  pid_task.c.1263B8983B21C0EC.idx  pid_task.h.55C9B226C47E0B38.idx  threeeyes_task.c.ABF1A9919B73890E.idx  threeeyes_task.h.1B21A870402A412B.idx  wcet_gpio.h.612A6D4E8F9B17D0.idx  (+3 more)
Andre_Silva/tarefa_3/main/: CMakeLists.txt  body_2wd.h  main.c  wcet_gpio.h  wdt_stuckedTask.c  wheel.h
Andre_Silva/tarefa_3/main/test_tasks/: Log_task.c  Log_task.h  ir_line_task.c  pid_task.c  threeeyes_task.c
